[tool.poetry]
name = "cv-hw2"
version = "0.1.0"
description = "hehe"
authors = ["Yuto"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
